css/styles.css
/* ... */
@media (max-width: 1200px) {
  #career {
    width: auto;
  }
  #career_images {
    display: flex;
    position: relative;
    width: 360px;
    height: 262px;
  }
  #left_career_image {
    width: 180px;
    height: 262px;
  }
  .right_career_image {
    height: 130px;
    width: 180px;
  }
  #career_text {
    font-size: 2rem;
    margin-top: 20px;
    width: 450px;
  }
  #career_container {
    display: flex;
    flex-direction: column;
    width: 90%;
    align-items: center;
  }
}
#conatct-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: rgba(51, 51, 51, 0);
  color: #ccc;
  padding: 20px;
}

.contact-text {
  color: #fff;
  text-align: left;
  margin-bottom: 2%;
  width: 520px;
  font-size: 1.4rem;
}

.contact {
  width: 500px;
  height: 10%;
  background-color: #444;
  color: #ccc;
  border: none;
  padding: 10px;
  margin-bottom: 10px;
  outline: none;
}

#Contact-Message {
  width: 500px;
  height: 8vh;
  background-color: #444;
  color: #ccc;
  border: none;
  padding: 10px;
  margin-bottom: 10px;
  resize: none;
  outline: none;
}

#Contact-Submit {
  width: 8vw;
  height: 3vh;
  background-color: #555;
  color: #fff;
  border: none;
  cursor: pointer;
  transition: 0.3s;
}

#submit-button {
  width: 520px;
  height: 10%;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

#Contact-Submit:hover {
  background-color: #777;
}

::-webkit-input-placeholder {
  color: #ccc;
}

::-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

:-ms-input-placeholder {
  color: #ccc;
}

:-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

#footer {
  background-color: #393939;
  color: #fff;
  position: relative;
  padding: 10px;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 10%;
}

.up-arrows {
  font-size: 24px;
  color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  background: #e70000;
  top: -5px;
  width: 50px;
  height: 30px;
  transform: rotate(270deg);
  transition: all 0.3s ease;
  cursor: pointer;
}

.up-arrows:hover {
  top: -15px;
  background: #ff1a1a;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
}

#GithubBox {
  width: 65px;
  height: 65px;
  margin: 60px 0 -15px 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.github-link {
  color: #fff;
  font-size: 24px;
  text-decoration: none;
}

.github-link:hover {
  color: #ccc;
}

.github-image {
  width: 65px;
  height: auto;
  filter: invert(1);
  transition: all 0.3s ease;
}

.github-link:hover .github-image {
  width: 75px;
}

.github-link:hover {
  color: #ccc;
}

.name-year {
  font-size: 1rem;
  color: #fff;
}

.row {
  max-width: 114rem;
  background: transparent;
  text-align: left;
  height: 55rem;
  margin: 0 auto;
}
.row:not(:last-child) {
  margin-bottom: 8rem;
}
.row::after {
  content: "";
  display: table;
  clear: both;
}
.row [class^=col-] {
  float: left;
}
.row [class^=col-]:not(:last-child) {
  margin-right: 60px;
}
.row .col-1-of-2 {
  width: calc((100% - 60px) / 2);
}
.row .col-1-of-3 {
  width: calc((100% - 2 * 60px) / 3);
}
.row .col-2-of-3 {
  width: calc(2 * ((100% - 2 * 60px) / 3) + 60px);
}
.row .col-1-of-4 {
  width: calc((100% - 3 * 60px) / 4);
}
.row .col-2-of-4 {
  width: calc(2 * ((100% - 3 * 60px) / 4) + 60px);
}
.row .col-3-of-4 {
  width: calc(3 * ((100% - 3 * 60px) / 4) + 2 * 60px);
}

.header {
  height: 95vh;
  position: relative;
  margin: 30px;
  min-width: 220px;
}

#headerText {
  position: absolute;
  height: 100%;
  min-width: 220px;
  left: 50%;
  transform: translateX(-50%);
  color: #9d9b9b;
  font-size: 2vw;
  z-index: 10;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

#headerTextName,
#headerTextProfession,
#headerTextProfession {
  color: white;
  font-family: math;
}

#headerTextName {
  font-size: 8rem;
  margin-top: 25vh;
}

#headerTextProfession {
  font-size: 2rem;
}

#headerTextCareer {
  font-size: 1rem;
}

/* Basic styles for the button */
@keyframes rippleEffect {
  0% {
    transform: scale(1);
    opacity: 1;
  }
  100% {
    transform: scale(1.4) scaleY(1.5);
    opacity: 0;
  }
}
#headerButton {
  position: relative;
  display: inline-block;
  margin-top: 10%;
}

#viewButtonLink {
  display: inline-block;
  text-decoration: none;
}

#viewButton {
  position: relative;
  width: 100%;
  border: 1px solid rgb(255, 255, 255);
  color: white;
  background: none;
  padding: 10px 20px;
  cursor: pointer;
  transition: transform 0.2s;
  height: 100%;
}

#viewButton::before,
#viewButton::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border: 1px solid rgb(255, 255, 255);
  opacity: 0;
  z-index: -1;
  box-sizing: border-box;
  transform-origin: center;
  transition: transform 0.2s, opacity 0.2s;
}

#viewButton:hover {
  text-shadow: 1px 1px 2px #427388;
  transform: translateY(-2px);
}

#viewButton:hover::before {
  animation: rippleEffect 0.8s forwards;
}

#viewButton:hover::after {
  animation: rippleEffect 0.8s 0.2s forwards;
}

#viewButton:active {
  transform: translateY(0);
}

.navigation-bar {
  position: sticky;
  top: 0;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  height: 3.6rem;
  min-width: 220px;
  border-bottom: 1px solid #000;
  background-color: rgba(51, 51, 51, 0.95);
  backdrop-filter: blur(8px);
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
  z-index: 999;
  margin: 0 30px 30px 30px;
}

.navigation_item {
  text-decoration: none;
  font-family: montserrat, sans-serif;
  transition: all 0.3s;
  margin-right: 10rem;
  font-size: 1.3rem;
  font-weight: 250;
  letter-spacing: 2px;
  text-decoration: none;
  color: #fff;
}
.navigation_item:not(:last-child) {
  margin-right: 2rem;
}
.navigation_item:last-child {
  margin-right: 5rem;
}
/* ... */

